--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
         </tr>
     </table>
 
+    <div id="btndiv">
+        <button id="undo">↩️</button>
+    </div>
+
     <form>
         <label for="row-select">Pick number of rows : </label>
         <select name="row" id="row-select">
